# hedfpy

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
example/: pupil_preprocessing.py
hedfpy/: CommandLineOperator.py  EDFOperator.py  EyeSignalOperator.py  HDFEyeOperator.py  Operator.py  __init__.py  commandline.py  dfoperator.py  edf.py  eyesignal.py  hdf.py  log.py  operator.py
src/: CommandLineOperator.py  EDFOperator.py  EyeSignalOperator.py  HDFEyeOperator.py  Operator.py  __init__.py  functions_jw.py  functions_jw_GLM.py
test/: introduction.ipynb  tk_1_2014-10-06_16.44.11.msg
